--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <center><h1>The iPhone 13 series</h1></center>
-    <nav style="background-color: grey;" ><ul>
-        <li><a href="http://127.0.0.1:5500/Desktop/html/homepage.html">homepage</a></li>
-        <li><a href="http://127.0.0.1:5500/Desktop/html/iphone%2013%20mini.html">iPhone 13 mini</a></li>
-        <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013.html>iPhone 13</a></li>
-        <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro.html>iPhone 13 pro</a></li>
-        <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro%20max.html>iPhone 13 pro max</a></li>
+       <nav style="background-color: grey;" ><ul>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="iphone 13 mini.html">iPhone 13 mini</a></li>
+        <li><a href="iphone 13.html">iPhone 13</a></li>
+        <li><a href="iphone 13 pro.html">iPhone 13 pro</a></li>
+        <li><a href="iphone 13 pro max.html">iPhone 13 pro max</a></li>
     </ul>
-</nav>>
+</nav>
 
 
     <center><img src="https://www.gamerevolution.com/assets/uploads/2021/09/iPhone-13-Mini-delay-2-640x360.jpg" width="600px" height="700px">
