--- a/iphone 13 mini.html
+++ b/iphone 13 mini.html
@@ -13,14 +13,14 @@
     </style>
     <body>
         <center><h1>The iPhone 13 mini</h1></center>
-        <nav style="background-color: grey;" ><ul>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/homepage.html">homepage</a></li>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/iphone%2013%20mini.html">iPhone 13 mini</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013.html>iPhone 13</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro.html>iPhone 13 pro</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro%20max.html>iPhone 13 pro max</a></li>
-        </ul>
-    </nav>>
+          <nav style="background-color: grey;" ><ul>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="iphone 13 mini.html">iPhone 13 mini</a></li>
+        <li><a href="iphone 13.html">iPhone 13</a></li>
+        <li><a href="iphone 13 pro.html">iPhone 13 pro</a></li>
+        <li><a href="iphone 13 pro max.html">iPhone 13 pro max</a></li>
+    </ul>
+</nav>
         <img src="https://fdn.gsmarena.com/imgroot/news/21/10/apple-iphone-13-mini-for-review/-1200w5/gsmarena_002.jpg" >
         <p>The Apple iPhone 13 mini is the most compact flagship smartphone money can buy. It is astonishingly rare to find such a pocket-friendly smartphone.Last year, we all agreed that the iPhone 12 mini wasn't a great phone, but this year, Apple fixed all of the major problems with the iPhone 13 mini making it one of the best new iPhones you can get. I have it and in my opinion it is the best in the lineup! This phone starts at £679.
             
