Update iphone 13 pro.html

--- a/iphone 13 pro.html
+++ b/iphone 13 pro.html
@@ -14,13 +14,13 @@
     <body>
         <center><h1>The iPhone 13 pro </h1></center>
         <nav style="background-color: grey;" ><ul>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/homepage.html">homepage</a></li>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/iphone%2013%20mini.html">iPhone 13 mini</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013.html>iPhone 13</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro.html>iPhone 13 pro</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro%20max.html>iPhone 13 pro max</a></li>
-        </ul>
-    </nav>>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="iphone 13 mini.html">iPhone 13 mini</a></li>
+        <li><a href="iphone 13.html">iPhone 13</a></li>
+        <li><a href="iphone 13 pro.html">iPhone 13 pro</a></li>
+        <li><a href="iphone 13 pro max.html">iPhone 13 pro max</a></li>
+    </ul>
+</nav>
         <img src="https://cdn.mos.cms.futurecdn.net/Dx2P4dyBJxv6FF5RNCKAYK.jpg">
         <p>The iPhone 13 Pro is a solid upgrade on last year’s model with a faster and slicker screen, a better camera with 3x optical zoom, longer battery life and a small price cut.
 
