--- a/iphone 13.html
+++ b/iphone 13.html
@@ -14,13 +14,13 @@
     <body>
         <center><h1>The iPhone 13 </h1></center>
         <nav style="background-color: grey;" ><ul>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/homepage.html">homepage</a></li>
-            <li><a href="http://127.0.0.1:5500/Desktop/html/iphone%2013%20mini.html">iPhone 13 mini</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013.html>iPhone 13</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro.html>iPhone 13 pro</a></li>
-            <li><a href=http://127.0.0.1:5500/Desktop/html/iphone%2013%20pro%20max.html>iPhone 13 pro max</a></li>
-        </ul>
-    </nav>>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="iphone 13 mini.html">iPhone 13 mini</a></li>
+        <li><a href="iphone 13.html">iPhone 13</a></li>
+        <li><a href="iphone 13 pro.html">iPhone 13 pro</a></li>
+        <li><a href="iphone 13 pro max.html">iPhone 13 pro max</a></li>
+    </ul>
+</nav>
     <img src="https://images.macrumors.com/article-new/2020/10/iphone-13-dual-lens-camera.jpg" >
     <p>The iPhone 13 isn’t a game changer for Apple’s series of smartphones, but it’s an important iteration that offers better battery life, a better processor and an upgraded camera setup than iPhones that have gone before it. If you’re looking for a fast and capable smartphone, and don’t need the extra features of the pricier Pro model, this is a top choice.The phone is a bit thicker than its predecessor as it has a bigger battery which will last longer than the previous phones. This starts at £779</p>
     <footer style="background-color: gray; width: 100%;text-align: center;">
