--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
     <center><h1>The iPhone 13 series</h1></center>
        <nav style="background-color: grey;" ><ul>
-        <li><a href="index.html">homepage</a></li>
-        <li><a href="iphone 13 mini.html">iPhone 13 mini</a></li>
-        <li><a href="iphone 13.html">iPhone 13</a></li>
-        <li><a href="iphone 13 pro.html">iPhone 13 pro</a></li>
-        <li><a href="iphone 13 pro max.html">iPhone 13 pro max</a></li>
+        <li><a href=index.html>homepage</a></li>
+        <li><a href=iphone 13 mini.html>iPhone 13 mini</a></li>
+        <li><a href=iphone 13.html>iPhone 13</a></li>
+        <li><a href=iphone 13 pro.html>iPhone 13 pro</a></li>
+        <li><a href=iphone 13 pro max.html>iPhone 13 pro max</a></li>
     </ul>
 </nav>
 
